--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL="postgresql://postgres:Estate123@localhost:5432/estate_db"
+DATABASE_URL="postgresql://estatedb_3qmi_user:Cub6h9mZi7lGOnffKcUmqcxwptldJGnx@dpg-d52llb63jp1c73c6ovq0-a.singapore-postgres.render.com/estatedb_3qmi"
 JWT_SECRET="supersecretkey123"
-PORT=5001
+NODE_ENV=production
