Add lucide-react dependency

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 DATABASE_URL="postgresql://estatedb_3qmi_user:Cub6h9mZi7lGOnffKcUmqcxwptldJGnx@dpg-d52llb63jp1c73c6ovq0-a.singapore-postgres.render.com/estatedb_3qmi"
 JWT_SECRET="supersecretkey123"
 NODE_ENV=production
+PORT=10000
+FRONTEND_URL=https://estate-frontend-62p7.onrender.com
