--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "estate-backend",
+  "name": "propify-backend",
   "version": "1.0.0",
-  "description": "Real Estate Platform Backend API",
+  "description": "Real Estate Property Management System Backend API",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "db:sync": "node scripts/syncDatabase.js",
+    "db:seed": "node scripts/seedDatabase.js"
   },
   "keywords": [
     "real-estate",
-    "backend",
-    "api",
-    "nodejs",
+    "property",
+    "postgresql",
     "express",
-    "postgresql"
+    "api"
   ],
-  "author": "",
+  "author": "Your Name",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
@@ -26,18 +27,23 @@
     "morgan": "^1.10.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.35.0",
+    "sequelize": "^6.35.2",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
+    "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "multer": "^1.4.5-lts.1",
-    "cloudinary": "^1.41.0",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "cloudinary": "^1.41.3",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
+    "express-session": "^1.17.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=14.0.0",
+    "npm": ">=6.0.0"
   }
 }
