Add lucide-react dependency

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://estatedb_3qmi_user:Cub6h9mZi7lGOnffKcUmqcxwptldJGnx@dpg-d52llb63jp1c73c6ovq0-a.singapore-postgres.render.com/estatedb_3qmi"
+DATABASE_URL="postgresql://neondb_owner:npg_Arzkxba8ngt1@ep-polished-firefly-a1gjimaz-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
 JWT_SECRET="supersecretkey123"
 NODE_ENV=production
 PORT=10000
