feat: migrate to Supabase + Koyeb

--- a/.env
+++ b/.env
@@ -1,5 +1,27 @@
-DATABASE_URL="postgresql://neondb_owner:npg_Arzkxba8ngt1@ep-polished-firefly-a1gjimaz-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
-JWT_SECRET="supersecretkey123"
+# ==========================================
+# DATABASE CONFIGURATION (SUPABASE)
+# ==========================================
+DATABASE_URL=postgresql://postgres.tgkdkdqdstfvseppepie:smwU6O4RrcfBUGCv@aws-1-ap-northeast-2.pooler.supabase.com:5432/postgres
+
+# ==========================================
+# JWT AUTHENTICATION
+# ==========================================
+JWT_SECRET=supersecretkey123
+
+# ==========================================
+# SERVER CONFIGURATION
+# ==========================================
 NODE_ENV=production
-PORT=10000
-FRONTEND_URL=https://estate-frontend-62p7.onrender.com
+PORT=8000
+
+# ==========================================
+# FRONTEND CONFIGURATION
+# ==========================================
+FRONTEND_URL=https://estatefrontend-drab.vercel.app/
+
+# ==========================================
+# SUPABASE STORAGE (FOR PROPERTY IMAGES)
+# ==========================================
+SUPABASE_URL=https://tgkdkdqdstfvseppepie.supabase.co
+SUPABASE_ANON_KEY=sb_publishable_ca7DFtNmyKU90Xd-9Z9_6A_FD0lS...
+SUPABASE_STORAGE_BUCKET=property-images
