--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "propify-backend",
   "version": "1.0.0",
-  "description": "Real Estate Property Management System Backend API",
+  "description": "Real Estate Property Management System Backend API - Production Ready",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -14,8 +14,10 @@
     "real-estate",
     "property",
     "postgresql",
+    "supabase",
     "express",
-    "api"
+    "api",
+    "koyeb"
   ],
   "author": "Your Name",
   "license": "ISC",
@@ -37,13 +39,14 @@
     "cloudinary": "^1.41.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
-    "express-session": "^1.17.3"
+    "express-session": "^1.17.3",
+    "@supabase/supabase-js": "^2.39.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
   },
   "engines": {
-    "node": ">=14.0.0",
-    "npm": ">=6.0.0"
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
